syntax = "proto3";

package multifile;

import "github.com/metaverse/truss/deftree/googlethirdparty/annotations.proto";

import "imported.proto";

service TEST {
  rpc GetBasic (BasicTypeRequest) returns (BasicTypeResponse) {
    option (google.api.http) = {
      get: "/1"
    };
  }


  rpc PostBasic (BasicTypeRequest) returns (BasicTypeRequest) {
    option (google.api.http) = {
      post: "/2"
      body: "*"
    };
  }
}

